2009-01-29  Alexander Larsson  <alexl@redhat.com>

        * common/gvfsicon.c:
        (g_vfs_icon_to_tokens):
	Dup string to avoid double free later.

2009-01-28  Ryan Lortie  <desrt@desrt.ca>

	Bug 569480 – trash backend crashes due to invalid write

	* daemon/trashlib/trashitem.c (trash_item_escape_name): correct
	extremely silly mistake.

	Problem caught by Seb's heroic valgrinding :)

2009-01-28  Cosimo Cecchi  <cosimoc@gnome.org>

	* daemon/gvfsbackendobexftp.c: (_invalidate_cache_helper),
	(do_mount), (push_transfer_started_cb),
	(push_transfer_completed_cb), (push_transfer_progress_cb),
	(push_data_free), (_push_single_file_helper), (do_push),
	(do_make_directory), (g_vfs_backend_obexftp_class_init):
	* daemon/obexftp-marshal.list:
	Implement write support for the ObexFTP backend (#519071).

2009-01-21  A. Walton  <awalton@gnome.org>

	* daemon/gvfsdaemon.c (daemon_schedule_exit):
	* daemon/gvfsjobcreatemonitor.c (create_reply):
	Use g_timeout_add_seconds() instead of g_timeout_add() to save
	some power.

2009-01-20  Bastien Nocera  <hadess@hadess.net>

	* daemon/gvfsbackenddnssd.c: Some devices/systems
	advertise SMB through zeroconf instead of NetBios,
	displays Apple Time Capsules in nautilus (Closes: #568147)

2009-01-20  Ryan Lortie  <desrt@desrt.ca>

	* daemon/gvfsbackendtrash.c: nail a couple of leaks

2009-01-20  Sebastien Bacher  <seb128@ubuntu.com>

	* common/Makefile.am: use glib where it is required

2009-01-19  Alexander Larsson  <alexl@redhat.com>

	* configure.ac:
	Post release version bump

=== gvfs 1.1.4 ===

2009-01-19  Alexander Larsson  <alexl@redhat.com>

	* NEWS:
	Update for release

2009-01-13  Hans Petter Jansson  <hpj@novell.com>

	* client/gvfsfusedaemon.c (getattr_for_file)
	(vfs_open)
	(vfs_create)
	(vfs_rmdir)
	(vfs_access): Get only the attributes we require. This speeds up
	directory listings in particular, since we don't need to probe
	individual files to determine their MIME types.

2009-01-12  Ryan Lortie  <desrt@desrt.ca>